[package]
name = "raster_runtime_path"
description = "raster_runtime Module path"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_path"
path = "src/lib.rs"

[dependencies]
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", features = ["std"], default-features = false }

[target.'cfg(windows)'.dependencies]
memchr = { version = "2", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
once_cell = { version = "1", features = ["std"], default-features = false }
rand = { version = "0.10.1", features = [
  "alloc",
  "thread_rng",
], default-features = false }

[[bench]]
name = "slash_replacement"
harness = false
