[package]
name = "raster_runtime_process"
description = "raster_runtime Module process"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_process"
path = "src/lib.rs"

[dependencies]
raster_runtime_events = { version = "0.8.1-beta", path = "../raster_runtime_events" }
raster_runtime_hooking = { version = "0.8.1-beta", path = "../../libs/raster_runtime_hooking" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", features = ["std"], default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = ["macros", "rt", "test-util"], default-features = false }
