[package]
name = "raster_runtime_querystring"
description = "raster_runtime Module querystring"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_querystring"
path = "src/lib.rs"

[dependencies]
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", features = ["std"], default-features = false }
