[package]
name = "raster_runtime_stream"
description = "raster_runtime Module stream"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_stream"
path = "src/lib.rs"

[dependencies]
raster_runtime_buffer = { version = "0.8.1-beta", path = "../raster_runtime_buffer" }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_events = { version = "0.8.1-beta", path = "../raster_runtime_events" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", features = [
  "bytearray-buffer",
], default-features = false }
rquickjs = { version = "=0.12.1", features = ["std"], default-features = false }
tokio = { version = "1", features = [
  "macros",
  "io-util",
], default-features = false }
