[package]
name = "raster_runtime_stream_web"
description = "raster_runtime Module stream/web"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_stream_web"
path = "src/lib.rs"

[dependencies]
raster_runtime_abort = { version = "0.8.1-beta", path = "../raster_runtime_abort" }
raster_runtime_util = { version = "0.8.1-beta", path = "../raster_runtime_util", default-features = false }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = ["test-util"], default-features = false }
