[package]
name = "raster_runtime_tty"
description = "raster_runtime Module tty"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_tty"
path = "src/lib.rs"

[dependencies]
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
libc = { version = "0.2", default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = ["test-util"], default-features = false }
