[package]
name = "raster_runtime_util"
description = "raster_runtime Module util"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_util"
path = "src/lib.rs"

[dependencies]
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_encoding = { version = "0.8.1-beta", path = "../../libs/raster_runtime_encoding" }
raster_runtime_logging = { version = "0.8.1-beta", path = "../../libs/raster_runtime_logging" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", default-features = false }
