[package]
name = "raster_runtime_webassembly"
description = "raster_runtime core WebAssembly JS API (WebAssembly.compile/instantiate/validate, Module/Instance/Memory/Table/Global) backed by wasmi"
version = "0.8.1-beta"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_webassembly"
path = "src/lib.rs"

[dependencies]
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", features = ["std"], default-features = false }
# Pinned to the exact release wasmi 1.1.0 depends on so validation performed via
# `wasmparser::Validator` during our pre-check pass observes identical feature gating
# semantics to the validation wasmi performs internally during `Module::new`.
wasmparser = { version = "=0.239.0", default-features = false, features = ["validate", "features", "std"] }
wasmi = { version = "=1.1.0", default-features = false, features = ["std", "simd"] }
once_cell = { version = "1", features = ["std"], default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = ["macros", "rt"] }
# `wat` is only ever used from `#[cfg(test)]` code to author small binary fixtures
# inline in Rust unit tests. It is never enabled for the production build of this
# crate (see the plan constraint: "生产代码不启用 wat").
wat = "1"
